Tweaked html files to use cloew site

--- a/public_html/UGC.html
+++ b/public_html/UGC.html
@@ -24,7 +24,7 @@ Current event:
 <span class=F1>HUMANS VS. ZOMBIES</span>
 <br>
 <br>
-<a href="http://inside.mines.edu/~mmazzocc"><span class=LI>For the official Humans Vs. Zombies, 
+<a href="http://inside.mines.edu/~cloew"><span class=LI>For the official Humans Vs. Zombies, 
 website, click here!!!!</span></a>
 <br>
 <br>
