--- a/public_html/register.html
+++ b/public_html/register.html
@@ -22,20 +22,20 @@ alink=white>
 <SPAN CLASS=F1>Registration</SPAN>
 <br>
 <br>
-<a href="/~mmazzocc/" color=WHITE><img src="Images/Home.png"></a>
-<a href="/~mmazzocc/cgi-bin/playerTable.cgi" color=WHITE><img src="Images/Players.png"></a>
-<a href="/~mmazzocc/report" color=WHITE><img src="Images/Report.png"></a>
-<a href="/~mmazzocc/register" color=WHITE><img src="Images/Register.png"></a>
-<a href="/~mmazzocc/rules" color=WHITE><img src="Images/Rules.png"></a>
-<a href="/~mmazzocc/mods" color=WHITE><img src="Images/Mods.png"></a>
-<a href="/~mmazzocc/contact" color=WHITE><img src="Images/Contact.png"></a>
+<a href="/~cloew/" color=WHITE><img src="Images/Home.png"></a>
+<a href="/~cloew/cgi-bin/playerTable.cgi" color=WHITE><img src="Images/Players.png"></a>
+<a href="/~cloew/report" color=WHITE><img src="Images/Report.png"></a>
+<a href="/~cloew/register" color=WHITE><img src="Images/Register.png"></a>
+<a href="/~cloew/rules" color=WHITE><img src="Images/Rules.png"></a>
+<a href="/~cloew/mods" color=WHITE><img src="Images/Mods.png"></a>
+<a href="/~cloew/contact" color=WHITE><img src="Images/Contact.png"></a>
 <br>
 <br>
 <div class=header>
 <span class=F1>Registration is closed, thanks for playing! Keep an eye out for the next game!</span>
 <br>
 <br>
-<FORM action="/~mmazzocc/cgi-bin/registration.cgi" method="GET">
+<FORM action="/~cloew/cgi-bin/registration.cgi" method="GET">
 Full Name: <input type="text" name="name">
 <br>
 Email*: <input type="text" name="email">
