--- a/public_html/report.html
+++ b/public_html/report.html
@@ -22,13 +22,13 @@ alink=white>
 <SPAN CLASS=F1>Report a Kill</SPAN>
 <br>
 <br>
-<a href="/~mmazzocc/" color=WHITE><img src="Images/Home.png"></a>
-<a href="/~mmazzocc/cgi-bin/playerTable.cgi" color=WHITE><img src="Images/Players.png"></a>
-<a href="/~mmazzocc/report" color=WHITE><img src="Images/Report.png"></a>
-<a href="/~mmazzocc/register" color=WHITE><img src="Images/Register.png"></a>
-<a href="/~mmazzocc/rules" color=WHITE><img src="Images/Rules.png"></a>
-<a href="/~mmazzocc/mods" color=WHITE><img src="Images/Mods.png"></a>
-<a href="/~mmazzocc/contact" color=WHITE><img src="Images/Contact.png"></a>
+<a href="/~cloew/" color=WHITE><img src="Images/Home.png"></a>
+<a href="/~cloew/cgi-bin/playerTable.cgi" color=WHITE><img src="Images/Players.png"></a>
+<a href="/~cloew/report" color=WHITE><img src="Images/Report.png"></a>
+<a href="/~cloew/register" color=WHITE><img src="Images/Register.png"></a>
+<a href="/~cloew/rules" color=WHITE><img src="Images/Rules.png"></a>
+<a href="/~cloew/mods" color=WHITE><img src="Images/Mods.png"></a>
+<a href="/~cloew/contact" color=WHITE><img src="Images/Contact.png"></a>
 <br>
 <br>
 <div class=header>
@@ -43,7 +43,7 @@ have killed.
 <span class=F3>DISHONEST REPORTING OF KILLS MAY RESULT IN EXPULSION FROM THE GAME. BE HONEST, PEOPLE.</span>
 <br>
 <br>
-<FORM action="/~mmazzocc/cgi-bin/report.cgi" method="GET">
+<FORM action="/~cloew/cgi-bin/report.cgi" method="GET">
 Zombie Player Code: <input type="text" name="z_code">
 <br>
 Human Player Code: <input type="text" name="h_code">
@@ -135,7 +135,7 @@ Date (Month/Day):
 <br>
 <input type="submit" value="Submit">
 </FORM>
-<span class=F3><a href="/~mmazzocc/lostcode.html" class=LI>Click here for lost/forgotten player codes</a></span>
+<span class=F3><a href="/~cloew/lostcode.html" class=LI>Click here for lost/forgotten player codes</a></span>
 <br>
 <br>
 &copy 2011 Maxwell Mazzocchi
