--- a/public_html/rules.html
+++ b/public_html/rules.html
@@ -22,20 +22,20 @@ alink=white>
 <SPAN CLASS=F1>Rules and Regulations</SPAN>
 <br>
 <br>
-<a href="/~mmazzocc/" color=WHITE><img src="Images/Home.png"></a>
-<a href="/~mmazzocc/cgi-bin/playerTable.cgi" color=WHITE><img src="Images/Players.png"></a>
-<a href="/~mmazzocc/report" color=WHITE><img src="Images/Report.png"></a>
-<a href="/~mmazzocc/register" color=WHITE><img src="Images/Register.png"></a>
-<a href="/~mmazzocc/rules" color=WHITE><img src="Images/Rules.png"></a>
-<a href="/~mmazzocc/mods" color=WHITE><img src="Images/Mods.png"></a>
-<a href="/~mmazzocc/contact" color=WHITE><img src="Images/Contact.png"></a>
+<a href="/~cloew/" color=WHITE><img src="Images/Home.png"></a>
+<a href="/~cloew/cgi-bin/playerTable.cgi" color=WHITE><img src="Images/Players.png"></a>
+<a href="/~cloew/report" color=WHITE><img src="Images/Report.png"></a>
+<a href="/~cloew/register" color=WHITE><img src="Images/Register.png"></a>
+<a href="/~cloew/rules" color=WHITE><img src="Images/Rules.png"></a>
+<a href="/~cloew/mods" color=WHITE><img src="Images/Mods.png"></a>
+<a href="/~cloew/contact" color=WHITE><img src="Images/Contact.png"></a>
 <br>
 <br>
 <div class=header>
 <span class=F3>The CSM Rule Set is officially UPDATED!</span>
 <br>
 <br>
-<span class=LI><a href="/~mmazzocc/HvZ_Rules.pdf" class=LI>CLICK HERE FOR CSM RULE SET</a></span>
+<span class=LI><a href="/~cloew/HvZ_Rules.pdf" class=LI>CLICK HERE FOR CSM RULE SET</a></span>
 <br>
 <br>
 This rule set is subject to change at any time. Any changes to it will be posted in the updates section, or in 
