Fixed bug with re-writing html page

--- a/public_html/players.html
+++ b/public_html/players.html
@@ -41,203 +41,10 @@ H=Human, Z=Zombie, D=Dead, X=Exempt (Temporary/Permanent Removal)
 <!-Table-->
 <table class=F4 border=2 bordercolor=#000000>
 <tr class=F3><td>Code Name</td><td>Status</td><td>Last Feed</td><td>Kills</td></tr>
-<tr><td>007</td><td>D</td><td>10:48 AM, 10/26</td><td>0</td></tr>
-<tr><td>13</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>[Alan]</td><td>D</td><td>1:00 PM, 10/27</td><td>4</td></tr>
-<tr><td>A CUTE PUPPY</td><td>D</td><td>7:30 PM, 10/28</td><td>1</td></tr>
-<tr><td>A Fluffy Pink Squirrel</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>A Ninja</td><td>D</td><td>1:30 PM, 10/29</td><td>0</td></tr>
-<tr><td>a-hor</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>Ajax</td><td>D</td><td>12:00 AM, 10/24</td><td>1</td></tr>
-<tr><td>alaskanassassin</td><td>D</td><td>8:00 AM, 10/28</td><td>28</td></tr>
-<tr><td>Amanda the Commanda Panda</td><td>D</td><td>12:00 AM, 10/27</td><td>3</td></tr>
-<tr><td>Anakin Skywalker</td><td>D</td><td>1:45 PM, 10/27</td><td>2</td></tr>
-<tr><td>Aqua Regia</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>AShephard</td><td>D</td><td>6:00 AM, 10/28</td><td>2</td></tr>
-<tr><td>Asia Prease</td><td>D</td><td>12:55 AM, 10/26</td><td>2</td></tr>
-<tr><td>Aximilicap</td><td>D</td><td>7:45 AM, 10/28</td><td>1</td></tr>
-<tr><td>Barney</td><td>D</td><td>1:42 PM, 10/29</td><td>0</td></tr>
-<tr><td>Battleship_Wounded</td><td>D</td><td>12:00 AM, 10/27</td><td>6</td></tr>
-<tr><td>Big Bear</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>Bill Murray</td><td>D</td><td>4:12 PM, 10/28</td><td>8</td></tr>
-<tr><td>Bill Scoggins</td><td>D</td><td>12:00 AM, 10/27</td><td>1</td></tr>
-<tr><td>Black6dog - Chive On!</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>Blackdeath</td><td>D</td><td>10:44 AM, 10/29</td><td>29</td></tr>
-<tr><td>Boris</td><td>D</td><td>10:00 PM, 10/26</td><td>0</td></tr>
-<tr><td>Bowser</td><td>D</td><td>12:15 AM, 10/27</td><td>0</td></tr>
-<tr><td>Boy Robin</td><td>D</td><td>8:00 AM, 10/26</td><td>4</td></tr>
-<tr><td>Bradford 210</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>bradford 212</td><td>D</td><td>6:00 PM, 10/28</td><td>4</td></tr>
-<tr><td>Brodyrick</td><td>D</td><td>11:10 AM, 10/29</td><td>0</td></tr>
-<tr><td>Bullet Hose</td><td>D</td><td>6:25 PM, 10/27</td><td>0</td></tr>
-<tr><td>Captain Drunkbear</td><td>D</td><td>1:00 AM, 10/27</td><td>0</td></tr>
-<tr><td>CatPrincess</td><td>D</td><td>9:50 PM, 10/25</td><td>2</td></tr>
-<tr><td>cawnor</td><td>D</td><td>11:00 AM, 10/26</td><td>2</td></tr>
-<tr><td>cdick</td><td>D</td><td>5:53 PM, 10/26</td><td>0</td></tr>
-<tr><td>Ceroz</td><td>D</td><td>1:00 PM, 10/25</td><td>0</td></tr>
-<tr><td>Chickachan</td><td>D</td><td>11:42 AM, 10/24</td><td>0</td></tr>
-<tr><td>chrisrogers.com</td><td>D</td><td>8:00 AM, 10/26</td><td>0</td></tr>
-<tr><td>Clay</td><td>D</td><td>8:00 PM, 10/24</td><td>1</td></tr>
-<tr><td>climbernerd</td><td>D</td><td>6:00 PM, 10/24</td><td>0</td></tr>
-<tr><td>Codename</td><td>D</td><td>9:55 AM, 10/26</td><td>0</td></tr>
-<tr><td>Coldskin</td><td>D</td><td>6:25 PM, 10/27</td><td>5</td></tr>
-<tr><td>Colin Oscopy </td><td>D</td><td>12:42 AM, 10/25</td><td>1</td></tr>
-<tr><td>Columbia</td><td>D</td><td>8:00 PM, 10/28</td><td>2</td></tr>
-<tr><td>CookiesRiot!</td><td>D</td><td>1:45 PM, 10/27</td><td>3</td></tr>
-<tr><td>Cool Jeeper</td><td>D</td><td>11:10 AM, 10/29</td><td>1</td></tr>
-<tr><td>crackle</td><td>D</td><td>2:00 PM, 10/27</td><td>2</td></tr>
-<tr><td>Crocodile Vicious</td><td>D</td><td>2:55 PM, 10/24</td><td>1</td></tr>
-<tr><td>CrtlAltDel</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>CuriousConfusedConfucius</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>cutelittleflyingsquirrel</td><td>D</td><td>4:15 PM, 10/28</td><td>1</td></tr>
-<tr><td>dabbertorres</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>Dakmor</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>daprease</td><td>D</td><td>5:45 PM, 10/27</td><td>5</td></tr>
-<tr><td>Dar'Manda</td><td>D</td><td>12:27 AM, 10/27</td><td>0</td></tr>
-<tr><td>Darkrage</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>ddeveraux</td><td>D</td><td>12:00 AM, 10/25</td><td>5</td></tr>
-<tr><td>Demonpurger</td><td>D</td><td>12:40 AM, 10/26</td><td>0</td></tr>
-<tr><td>DGibbs</td><td>D</td><td>5:45 PM, 10/27</td><td>3</td></tr>
-<tr><td>Don_Fraun</td><td>D</td><td>7:30 PM, 10/26</td><td>10</td></tr>
-<tr><td>Donald Trump</td><td>D</td><td>1:54 PM, 10/27</td><td>5</td></tr>
-<tr><td>Dougaroo</td><td>D</td><td>10:00 AM, 10/24</td><td>0</td></tr>
-<tr><td>DR!LL3R</td><td>D</td><td>6:50 PM, 10/28</td><td>3</td></tr>
-<tr><td>Dr. Boom</td><td>D</td><td>5:45 PM, 10/27</td><td>0</td></tr>
-<tr><td>Dr. Disco</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>Dr. Sparks</td><td>D</td><td>1:01 PM, 10/28</td><td>2</td></tr>
-<tr><td>DrewPeacok</td><td>D</td><td>4:25 PM, 10/24</td><td>1</td></tr>
-<tr><td>E3</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>ebninjadude</td><td>D</td><td>3:00 PM, 10/26</td><td>8</td></tr>
-<tr><td>Echoes</td><td>D</td><td>11:10 AM, 10/29</td><td>7</td></tr>
-<tr><td>eeveepwns</td><td>D</td><td>5:00 PM, 10/26</td><td>3</td></tr>
-<tr><td>El Conejo del Fuego</td><td>D</td><td>7:00 PM, 10/24</td><td>0</td></tr>
-<tr><td>El Pinguino</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>Ender</td><td>D</td><td>7:40 PM, 10/28</td><td>42</td></tr>
-<tr><td>Ender W.</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>Erus</td><td>D</td><td>6:00 PM, 10/24</td><td>0</td></tr>
-<tr><td>Ethan Hunt</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>FallingBear</td><td>D</td><td>9:00 AM, 10/24</td><td>0</td></tr>
-<tr><td>FarmerWill</td><td>D</td><td>1:55 PM, 10/25</td><td>4</td></tr>
-<tr><td>FattyCakes</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>Fish</td><td>D</td><td>12:00 AM, 10/27</td><td>2</td></tr>
-<tr><td>Flashbang</td><td>D</td><td>5:30 PM, 10/27</td><td>5</td></tr>
-<tr><td>Flounder</td><td>D</td><td>10:00 AM, 10/24</td><td>11</td></tr>
-<tr><td>Forseti</td><td>D</td><td>5:00 PM, 10/27</td><td>4</td></tr>
-<tr><td>FoshoG</td><td>D</td><td>10:15 AM, 10/25</td><td>1</td></tr>
-<tr><td>Fowler30</td><td>D</td><td>12:00 AM, 10/27</td><td>4</td></tr>
-<tr><td>fred</td><td>D</td><td>4:15 PM, 10/28</td><td>0</td></tr>
-<tr><td>FrogMan1171</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>ganondork</td><td>X</td><td>N/A</td><td>0</td></tr>
-<tr><td>Gerto </td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>Gingerbread Man</td><td>D</td><td>1:45 PM, 10/27</td><td>0</td></tr>
-<tr><td>Gingervitus</td><td>D</td><td>12:30 AM, 10/25</td><td>2</td></tr>
-<tr><td>Grant Bishop</td><td>D</td><td>12:00 AM, 10/27</td><td>0</td></tr>
-<tr><td>GrumpeeManatee</td><td>D</td><td>7:00 PM, 10/28</td><td>0</td></tr>
-<tr><td>gsmith</td><td>D</td><td>6:00 PM, 10/27</td><td>0</td></tr>
-<tr><td>gumby</td><td>D</td><td>12:00 AM, 10/27</td><td>10</td></tr>
-<tr><td>Hackysack</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>Hammer514</td><td>D</td><td>10:00 PM, 10/26</td><td>0</td></tr>
-<tr><td>Hank</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>Harley Quinn</td><td>D</td><td>11:45 AM, 10/26</td><td>7</td></tr>
-<tr><td>Heinchas</td><td>D</td><td>11:00 AM, 10/27</td><td>3</td></tr>
-<tr><td>Herugrim</td><td>D</td><td>6:00 PM, 10/24</td><td>0</td></tr>
-<tr><td>Hobo Joe</td><td>D</td><td>6:00 PM, 10/27</td><td>2</td></tr>
-<tr><td>Hopeless Loser</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>Hybrid</td><td>D</td><td>11:00 AM, 10/24</td><td>0</td></tr>
-<tr><td>Icy Taco</td><td>D</td><td>10:00 AM, 10/26</td><td>1</td></tr>
-<tr><td>idrinkwholemilk</td><td>D</td><td>6:00 PM, 10/27</td><td>2</td></tr>
-<tr><td>Ishmaellius</td><td>D</td><td>6:00 PM, 10/27</td><td>8</td></tr>
-<tr><td>jack jack</td><td>X</td><td>N/A</td><td>0</td></tr>
-<tr><td>Jack of Blades</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>Jeipytoc</td><td>D</td><td>5:45 PM, 10/27</td><td>1</td></tr>
-<tr><td>Jenna Marbles</td><td>D</td><td>3:15 PM, 10/28</td><td>2</td></tr>
-<tr><td>JKBuster</td><td>D</td><td>1:01 PM, 10/28</td><td>0</td></tr>
-<tr><td>jman</td><td>D</td><td>11:45 AM, 10/24</td><td>0</td></tr>
-<tr><td>jobin</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>Josh</td><td>D</td><td>12:00 AM, 10/24</td><td>0</td></tr>
-<tr><td>Katy Perry</td><td>D</td><td>2:00 PM, 10/28</td><td>0</td></tr>
-<tr><td>Kayler</td><td>D</td><td>1:30 PM, 10/26</td><td>1</td></tr>
-<tr><td>kemery</td><td>D</td><td>2:55 PM, 10/28</td><td>11</td></tr>
-<tr><td>Kids Next Door</td><td>D</td><td>7:45 AM, 10/28</td><td>4</td></tr>
-<tr><td>Kiss</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>KombatWombat</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>LazerBear</td><td>D</td><td>3:00 PM, 10/27</td><td>0</td></tr>
-<tr><td>Leon_Kennedy</td><td>D</td><td>10:00 AM, 10/24</td><td>0</td></tr>
-<tr><td>Leonidas</td><td>D</td><td>12:00 AM, 10/27</td><td>1</td></tr>
-<tr><td>LigerZero</td><td>D</td><td>12:00 AM, 10/27</td><td>6</td></tr>
-<tr><td>Llanfairpwllgwyngyllgogerychwyrndrobwllllantysiliogogogoch</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>Logan Nissenson</td><td>D</td><td>4:17 PM, 10/28</td><td>3</td></tr>
-<tr><td>machiavelli</td><td>D</td><td>1:30 PM, 10/29</td><td>8</td></tr>
-<tr><td>Maisy</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>MAK</td><td>D</td><td>7:00 PM, 10/28</td><td>7</td></tr>
-<tr><td>Man in Grey</td><td>D</td><td>4:00 PM, 10/24</td><td>0</td></tr>
-<tr><td>Manticore</td><td>D</td><td>1:47 PM, 10/29</td><td>0</td></tr>
-<tr><td>Matt Childers</td><td>D</td><td>1:00 PM, 10/28</td><td>2</td></tr>
-<tr><td>Max Fightmaster</td><td>D</td><td>8:00 AM, 10/28</td><td>0</td></tr>
-<tr><td>Max Power</td><td>D</td><td>8:00 PM, 10/28</td><td>1</td></tr>
-<tr><td>MaximusRex</td><td>D</td><td>:N/A AM, /</td><td>0</td></tr>
-<tr><td>Maxwell Raymond Mazzocchi</td><td>D</td><td>12:45 AM, 10/27</td><td>1</td></tr>
-<tr><td>Metalsniper</td><td>D</td><td>12:00 AM, 10/27</td><td>2</td></tr>
-<tr><td>Mikau</td><td>D</td><td>4:20 PM, 10/27</td><td>1</td></tr>
-<tr><td>Minimoose</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>Mordacai</td><td>D</td><td>6:00 PM, 10/27</td><td>2</td></tr>
-<tr><td>MountainMan</td><td>D</td><td>1:45 PM, 10/27</td><td>0</td></tr>
-<tr><td>Mr. Anderson</td><td>D</td><td>12:00 AM, 10/27</td><td>2</td></tr>
-<tr><td>Mr. Freeze</td><td>D</td><td>8:00 AM, 10/26</td><td>1</td></tr>
-<tr><td>Mr. Game and Watch</td><td>D</td><td>8:00 PM, 10/26</td><td>3</td></tr>
-<tr><td>Mr. Smith</td><td>D</td><td>12:00 AM, 10/28</td><td>3</td></tr>
-<tr><td>Muad’dib</td><td>D</td><td>1:00 PM, 10/27</td><td>4</td></tr>
-<tr><td>Mulldrifter</td><td>D</td><td>5:00 PM, 10/26</td><td>6</td></tr>
-<tr><td>Nate122</td><td>D</td><td>3:31 PM, 10/24</td><td>0</td></tr>
-<tr><td>Night Runner</td><td>D</td><td>9:00 PM, 10/27</td><td>0</td></tr>
-<tr><td>Nikola Tesla</td><td>D</td><td>1:00 PM, 10/24</td><td>0</td></tr>
-<tr><td>Ninjedi</td><td>D</td><td>11:00 AM, 10/27</td><td>1</td></tr>
-<tr><td>Noble 6</td><td>D</td><td>2:47 PM, 10/28</td><td>4</td></tr>
-<tr><td>Oober</td><td>D</td><td>4:33 PM, 10/27</td><td>5</td></tr>
-<tr><td>Pastafarian187</td><td>D</td><td>5:45 PM, 10/27</td><td>3</td></tr>
-<tr><td>Patches O'Houlihan</td><td>D</td><td>2:30 PM, 10/27</td><td>0</td></tr>
-<tr><td>PCON</td><td>D</td><td>9:00 PM, 10/27</td><td>0</td></tr>
-<tr><td>PerfectStranger</td><td>D</td><td>2:00 PM, 10/26</td><td>0</td></tr>
-<tr><td>Petra Arkanian</td><td>D</td><td>1:10 PM, 10/29</td><td>6</td></tr>
-<tr><td>Pi Penguin</td><td>D</td><td>9:00 AM, 10/24</td><td>12</td></tr>
-<tr><td>Pip</td><td>D</td><td>12:27 AM, 10/27</td><td>5</td></tr>
-<tr><td>Plankton</td><td>D</td><td>11:00 AM, 10/24</td><td>8</td></tr>
-<tr><td>Poison Ivy</td><td>D</td><td>11:45 AM, 10/26</td><td>0</td></tr>
-<tr><td>Pop</td><td>D</td><td>1:42 PM, 10/27</td><td>1</td></tr>
-<tr><td>Powderedgreens</td><td>D</td><td>1:00 PM, 10/24</td><td>0</td></tr>
-<tr><td>Prince Rapidashing</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>psycopants2</td><td>D</td><td>3:15 PM, 10/28</td><td>0</td></tr>
-<tr><td>Puddin Cup</td><td>D</td><td>10:00 PM, 10/26</td><td>0</td></tr>
-<tr><td>Rabbit</td><td>D</td><td>9:00 PM, 10/27</td><td>6</td></tr>
-<tr><td>Rail</td><td>D</td><td>1:00 PM, 10/24</td><td>1</td></tr>
-<tr><td>Ravage</td><td>D</td><td>2:00 PM, 10/26</td><td>0</td></tr>
-<tr><td>RaveUp</td><td>D</td><td>1:35 PM, 10/29</td><td>0</td></tr>
-<tr><td>Red Alpha</td><td>D</td><td>1:10 PM, 10/24</td><td>0</td></tr>
-<tr><td>red stallion</td><td>D</td><td>1:00 PM, 10/26</td><td>38</td></tr>
-<tr><td>Red-Five</td><td>D</td><td>12:00 AM, 10/27</td><td>4</td></tr>
-<tr><td>REDBOX</td><td>D</td><td>4:50 PM, 10/28</td><td>6</td></tr>
-<tr><td>RedExorcist</td><td>D</td><td>11:00 AM, 10/26</td><td>0</td></tr>
-<tr><td>REDRUM</td><td>D</td><td>3:00 PM, 10/26</td><td>6</td></tr>
-<tr><td>Regnant</td><td>D</td><td>12:00 AM, 10/27</td><td>0</td></tr>
-<tr><td>Rehsif</td><td>D</td><td>1:00 PM, 10/25</td><td>0</td></tr>
-<tr><td>Remington Von Steelflex</td><td>D</td><td>3:55 PM, 10/24</td><td>0</td></tr>
-<tr><td>Res. of the Year</td><td>D</td><td>1:00 AM, 10/25</td><td>1</td></tr>
-<tr><td>rexroni</td><td>D</td><td>12:00 AM, 10/28</td><td>0</td></tr>
-<tr><td>rico suave</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>Robot Unicorn Blood</td><td>D</td><td>1:55 PM, 10/27</td><td>2</td></tr>
-<tr><td>Root_Beer</td><td>D</td><td>1:10 PM, 10/29</td><td>0</td></tr>
-<tr><td>Rubber Ducky</td><td>D</td><td>11:00 AM, 10/24</td><td>0</td></tr>
-<tr><td>rush</td><td>D</td><td>7:45 PM, 10/28</td><td>0</td></tr>
-<tr><td>sagerage</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>Sapphire</td><td>D</td><td>7:00 PM, 10/26</td><td>0</td></tr>
-<tr><td>Sarah Connor</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>Sartoris</td><td>D</td><td>11:42 AM, 10/24</td><td>2</td></tr>
-<tr><td>Sassy Pants</td><td>D</td><td>10:00 AM, 10/24</td><td>0</td></tr>
-<tr><td>Scuba Steve</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>shackenburg</td><td>D</td><td>5:00 PM, 10/24</td><td>0</td></tr>
-<tr><td>Sharky143</td><td>D</td><td>1:42 PM, 10/29</td><td>3</td></tr>
+<tr><td>Chrispy Chris</td><td>H</td><td>N/A</td><td>0</td></tr>
+<tr><td>Gory Rory</td><td>Z</td><td>9:18 PM, 11/27</td><td>25</td></tr>
+<tr><td>Professor Death</td><td>D</td><td>9:00 PM, 11/21</td><td>0</td></tr>
 <tr><td>Shotty</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>Silent Bob</td><td>D</td><td>12:00 AM, 10/27</td><td>5</td></tr>
 <tr><td>Singularity</td><td>H</td><td>N/A</td><td>0</td></tr>
 <tr><td>Sitting Duck</td><td>D</td><td>2:55 PM, 10/28</td><td>2</td></tr>
 <tr><td>SkippyD</td><td>D</td><td>5:15 PM, 10/26</td><td>1</td></tr>
@@ -278,26 +85,40 @@ H=Human, Z=Zombie, D=Dead, X=Exempt (Temporary/Permanent Removal)
 <tr><td>Todd</td><td>D</td><td>3:15 PM, 10/28</td><td>5</td></tr>
 <tr><td>Traaaaaiiiiins</td><td>H</td><td>N/A</td><td>0</td></tr>
 <tr><td>Tray</td><td>D</td><td>6:30 PM, 10/24</td><td>0</td></tr>
-<tr><td>TYTO</td><td>D</td><td>12:00 AM, 10/24</td><td>0</td></tr>
 <tr><td>Undefined</td><td>D</td><td>10:00 AM, 10/26</td><td>1</td></tr>
 <tr><td>Us3d Napkin</td><td>D</td><td>6:00 PM, 10/24</td><td>4</td></tr>
-<tr><td>Warchild</td><td>D</td><td>6:00 PM, 10/25</td><td>0</td></tr>
 <tr><td>Wheatley</td><td>D</td><td>12:30 AM, 10/28</td><td>1</td></tr>
-<tr><td>White Tiger</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>WonderWillard</td><td>D</td><td>6:00 PM, 10/24</td><td>0</td></tr>
-<tr><td>wp4prez</td><td>D</td><td>4:17 PM, 10/28</td><td>0</td></tr>
-<tr><td>Wyatt</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>Zap Brannigan</td><td>D</td><td>4:45 PM, 10/27</td><td>1</td></tr>
-<tr><td>Zdrack</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>ZeroPunctuation</td><td>D</td><td>4:50 PM, 10/28</td><td>0</td></tr>
-<tr><td>Zombie#1</td><td>H</td><td>N/A</td><td>0</td></tr>
-<tr><td>Zombieassassin</td><td>D</td><td>5:00 PM, 10/29</td><td>3</td></tr>
-<tr><td>Zyrnak</td><td>D</td><td>10:00 AM, 10/26</td><td>1</td></tr>
-<tr><td>성민 (Sung Min)</td><td>H</td><td>N/A</td><td>0</td></tr>
 </table>
 <!-EndTable-->
-<!--BegStat-->
-<br>Active Players: 54<br>Humans: 52<br>Zombies: 0<br>Most Kills:  (-1)<!--EndStat--><br><br>&copy 2011 Maxwell Mazzocchi</div>
+<br><br>&copy 2011 Maxwell Mazzocchi</div>
+<br>
+<br>
+<a href="/PH-Disclaimer" class=F2>Disclaimer</a>
+<br>
+<br>
+</div>
+</div>
+</BODY>
+</HTML>
+<br><br>&copy 2011 Maxwell Mazzocchi</div>
+<br>
+<br>
+<a href="/PH-Disclaimer" class=F2>Disclaimer</a>
+<br>
+<br>
+</div>
+</div>
+</BODY>
+</HTML><br><br>&copy 2011 Maxwell Mazzocchi</div>
+<br>
+<br>
+<a href="/PH-Disclaimer" class=F2>Disclaimer</a>
+<br>
+<br>
+</div>
+</div>
+</BODY>
+</HTML><br><br>&copy 2011 Maxwell Mazzocchi</div>
 <br>
 <br>
 <a href="/PH-Disclaimer" class=F2>Disclaimer</a>
