--- a/public_html/players.html
+++ b/public_html/players.html
@@ -90,7 +90,9 @@ H=Human, Z=Zombie, D=Dead, X=Exempt (Temporary/Permanent Removal)
 <tr><td>Wheatley</td><td>D</td><td>12:30 AM, 10/28</td><td>1</td></tr>
 </table>
 <!-EndTable-->
-<br><br>&copy 2011 Maxwell Mazzocchi</div>
+<!--BegStat-->
+<br>Active Players: 14<br>Humans: 13<br>Zombies: 1<br>Most Kills: Gory Rory (25)
+<!--EndStat--><br><br>&copy 2011 Maxwell Mazzocchi</div>
 <br>
 <br>
 <a href="/PH-Disclaimer" class=F2>Disclaimer</a>
